--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
         {% for href, title in [
           ['https://fridaysforfuture.de/forderungen/', 'Forderungen'],
           ['/podcast', 'Podcast'],
+          ['/spenden', 'Spenden'],
           ['/about', 'Kontakt']
         ] %}
           <li{% if this.is_child_of(href) %} class="active"{% endif
