Improve layout and GDPR

--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -4,22 +4,33 @@ body {
 }
 
 a {
-    color: #2a99b6;
+    color: #1DA64A;
 }
 
 a:hover {
-    color: #33bbdf;
+    color: #1B7340;
 }
 
 header, footer, div.page {
     width: 760px;
     margin: 0 auto;
-    background: #daeef3;
+    background: #549670;
     padding: 20px 30px;
 }
 
+header, footer {
+    color: white;
+}
+header a, footer  a {
+    color: white;
+}
+
+header a:hover, footer a:hover {
+    color: lightblue;
+}
+
 header h1 {
-    color: #169bbd;
+    color: white;
     margin: 0;
     font-weight: normal;
     font-size: 42px;
@@ -38,5 +49,5 @@ header nav ul li {
 }
 
 div.page {
-    background: #f1fbfe;
+    background: #90D3ED;
 }
