--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,7 @@
 body {
     font-family: 'Verdana', sans-serif;
     margin: 50px 25px;
+    background: #90D3ED;
 }
 
 a {
@@ -14,19 +15,19 @@ a:hover {
 header, footer, div.page {
     width: 760px;
     margin: 0 auto;
-    background: #549670;
     padding: 20px 30px;
 }
 
 header, footer {
+    background: #549670;
     color: white;
-}
-header a, footer  a {
-    color: white;
-}
+    a {
+        color: white;
+    }
 
-header a:hover, footer a:hover {
-    color: lightblue;
+    a:hover, a:hover {
+        color: lightblue;
+    }
 }
 
 header h1 {
@@ -49,5 +50,5 @@ header nav ul li {
 }
 
 div.page {
-    background: #90D3ED;
+    background: white;
 }
