--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="{{ '/static/style.css'|url }}">
+<link rel="stylesheet" href="{{ '/css/style.css'|asseturl }}">
 <title>{% block title %}Welcome{% endblock %} — klima-streik.de</title>
 <body>
   <header>
@@ -16,7 +16,7 @@
           ['/about', 'Kontakt']
         ] %}
           <li{% if this.is_child_of(href) %} class="active"{% endif
-            %}><a href="{{ href|url }}">{{ title }}</a></li>
+            %}><a href="{{ href }}">{{ title }}</a></li>
         {% endfor %}
       </ul>
     </nav>
