Update and rebuild page layout

--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -4,3 +4,9 @@
 {% block body %}
   {{ render_blog_post(this) }}
 {% endblock %}
+{%- block class -%}
+  events
+{%- endblock -%}
+{%- block scss -%}
+  css/events.min.css
+{%- endblock -%}
