--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,3 +9,9 @@
 
   {{ render_pagination(this.pagination) }}
 {% endblock %}
+{%- block class -%}
+  events
+{%- endblock -%}
+{%- block scss -%}
+  css/events.min.css
+{%- endblock -%}
