--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -1,20 +1,21 @@
-{% macro render_blog_post(post, from_index=false) %}
+{%- macro render_blog_post(post, from_index=false) %}
   <div class="blog-post">
-  {% if from_index %}
-    <h2><a href="{{ post|url }}">{{ post.title }}</a></h2>
-  {% else %}
-    <h2>{{ post.title }}</h2>
-  {% endif %}
+  {% if from_index -%}
+    <h2 class="headline"><a href="{{ post|url }}">{{ post.title }}</a></h2>
+  {% else -%}
+    <h2 class="headline"><a>{{ post.title }}</a></h2>
+  {% endif -%}
   <p class="meta">
-    written by
-    {% if post.twitter_handle %}
-      <a href="https://twitter.com/{{ post.twitter_handle
-        }}">{{ post.author or post.twitter_handle }}</a>
-    {% else %}
-      {{ post.author }}
-    {% endif %}
-    on {{ post.pub_date }}
+    {% if post.event_start_date != post.event_end_date -%}
+      Vom {{ post.event_start_date | dateformat('long', locale=post.alt ) }} bis {{ post.event_end_date | dateformat('long', locale=post.alt) }}.
+    {%- else -%}
+      Am {{ post.event_start_date | dateformat('long', locale=post.alt) }}.
+    {%- endif %}
   </p>
-  {{ post.body }}
+  {% if from_index -%}
+    {{ post.preview }}
+  {% else -%}
+    {{ post.body }}
+  {% endif -%}
   </div>
-{% endmacro %}
+{% endmacro -%}
