--- a/templates/macros/pagination.html
+++ b/templates/macros/pagination.html
@@ -1,15 +1,29 @@
-{% macro render_pagination(pagination) %}
+{%- macro render_pagination(pagination) %}
   <div class="pagination">
-    {% if pagination.has_prev %}
+    {% if pagination.has_prev -%}
       <a href="{{ pagination.prev|url }}">&laquo; Previous</a>
-    {% else %}
-      <span class="disabled">&laquo; Previous</span>
-    {% endif %}
-    | {{ pagination.page }} |
-    {% if pagination.has_next %}
+    {% else -%}
+      <a class="disabled">&laquo; Previous</a>
+    {% endif -%}
+    {% for site in range(pagination.pages) -%}
+      {% if site == 0 -%}
+        {%- if pagination.page == site + 1 -%}
+          <a class="disabled">{{ pagination.page }}</a>
+        {%- else -%}
+          <a href="{{ './'| url }}">{{ site + 1 }}</a>
+        {%- endif -%}
+      {%- else -%}
+        {%- if pagination.page == site + 1 -%}
+          <a class="disabled" >{{ pagination.page }}</a>
+        {%- else -%}
+          <a href="{{ './'| url }}page/{{ site + 1  }}/">{{ site + 1 }}</a>
+        {%- endif -%}
+      {%- endif %}
+    {% endfor -%}
+    {% if pagination.has_next -%}
       <a href="{{ pagination.next|url }}">Next &raquo;</a>
-    {% else %}
-      <span class="disabled">Next &raquo;</span>
-    {% endif %}
+    {%- else -%}
+      <a class="disabled">Next &raquo;</a>
+    {%- endif %}
   </div>
-{% endmacro %}
+{% endmacro -%}
