--- a/templates/page.html
+++ b/templates/page.html
@@ -1,6 +1,14 @@
-{% extends "layout.html" %}
-{% block title %}{{ this.title }}{% endblock %}
-{% block body %}
-  <h2>{{ this.title }}</h2>
-  {{ this.body }}
-{% endblock %}
+{%- extends "layout.html" -%}
+{%- block title -%}
+  {{- this.title -}}
+{%- endblock -%}
+{%- block body -%}
+    <h2>{{ this.title }}</h2>
+    {{ this.body }}
+{%- endblock -%}
+{%- block class -%}
+  page
+{%- endblock -%}
+{%- block scss -%}
+  css/main.min.css
+{%- endblock -%}
