--- a/templates/blocks/footer.html
+++ b/templates/blocks/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <p>
-    Fridays for Future - Ortsgruppe Bodensee auf social Media
+    <h2> Fridays for Future - Ortsgruppe Bodensee auf social Media</h2>
     <br>
     {% for ziel, name, icon in [
       ['https://twitter.com/fff_bodensee/', 'Twitter', '/images/icons/social/twitter.svg'],
