--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -3,16 +3,20 @@ footer {
         display: none;
     }
     margin: 0 auto;
-    background: $background_accent_1;
+    background: $background_accent_footer;
     padding: 20px 30px;
     font-size: $font_size_default;
-    color: $font_default;
+    color: $font_footer;
     text-align: center;
     a, a:link, a:visited {
-        color: $font_accent_4;
+        color: $font_accent_footer_link;
+        text-decoration: none;
     }
     a:hover {
-        color: $font_accent_3;
+        color: $font_accent_footer_linkhover;
+    }
+    .footer__social_logo:hover {
+        filter: drop-shadow(1px 1px 2px $font_accent_footer_link);
     }
 }
 
@@ -26,11 +30,14 @@ footer {
     footer {
         font-size: $font_size_default_mobile;
         color: silver;
-        a, a:link, a:visited {
+        a {
             color: grey;
         }
+        a:link, a:visited {
+            color: $font_accent_footer_link;
+        }
         a:hover {
-            color: white;
+            color: $font_accent_footer_linkhover;
         }
     }
 }
