Add mobile menu

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,7 +41,12 @@
         klima-streik.de
       {%- endblock -%}
     </a></h1>
+      <div class="default_nav">
       {%- include "blocks/navigation.html" -%}
+      </div>
+      <div class="mobile_nav">
+      {%- include "blocks/navigation_mobile.html" -%}
+      </div>
   </header>
   <div class="
     {%- block class -%}
