--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -169,6 +169,12 @@ header {
             line-height: 1.5;
         }
     }
+    .default_nav{
+        display: block;
+    }
+    .mobile_nav{
+        display: none;
+    }
 }
 
 
@@ -233,6 +239,12 @@ header {
                     }
                 }
             }
+        }
+        .default_nav{
+            display: none;
+        }
+        .mobile_nav{
+            display: block;
         }
     }
 }
