--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -7,7 +7,7 @@ div.page {
       font-size: $font_size_default;
     }
 
-    code {
+    code, table {
       color: $font_default;
       font-size: $font_size_default;
     }
