improve design for big screens

--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -57,7 +57,7 @@ div.page {
         margin: auto;
         max-width: $large_min_width;
 
-        p, ul li {
+        p, ul li, table {
             font-size: $font_size_default_large;
         }
 
